@@ -36,6 +36,10 @@ Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 @
 tbaMUD 3.61
+[May 19 2010] - Rumble
+  Gave Arne Troffaes proper credit for fixing Cygwin syslog rotation.
+[May 16 2010] - Rumble
+  Fixed bash, NO_BASH flag was being ignored. (thanks Anderyu)
 [Apr 22 2010] - Rumble
   Fixed osetval not modifying AC on players. (thanks Rudeboyrave)
 [Apr 12 2010] - Rumble 
@@ -363,7 +367,7 @@ tbaMUD-3.57
   Bug fix: Page command was paging when the character was not found and sending a NOPERSON message when he was found.
 [May 15 2008] - Rumble
   Fixed a bug where deleting the last quest in qedit caused a crash. (thanks Jamdog)
-  Updated autorun to fix a random syslog numbering bug. (thanks Zizazat)
+  Updated autorun to fix a random syslog numbering bug. (thanks Arne Troffaes)
 [May 10 2008] - Rumble
   Fixed another typo, added a check for !NPC do_gen_comm, and changed do_return to only run autowiz if level changes. (thanks Fizban)
 [May 08 2008] - Rumble
